Selecting VAT row from XLSX

--- a/src/TimCodes.Mtd.Vat.App/TimCodes.Mtd.Vat.App.csproj
+++ b/src/TimCodes.Mtd.Vat.App/TimCodes.Mtd.Vat.App.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.15.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
