Submit the return

--- a/src/TimCodes.Mtd.Vat.App/appsettings.json
+++ b/src/TimCodes.Mtd.Vat.App/appsettings.json
@@ -10,6 +10,8 @@
     "ApiBaseUri": "https://test-api.service.hmrc.gov.uk",
     "AuthUri": "https://test-www.tax.service.gov.uk/oauth/authorize",
     "TokenUri": "https://test-api.service.hmrc.gov.uk/oauth/token",
-    "scope": "read:vat"
+    "Scope": "read:vat write:vat",
+    "Version": "1.0.0",
+    "ProductName": "timcodes-mtd-vat"
   }
 }
