--- a/src/TimCodes.Mtd.Vat.App/TimCodes.Mtd.Vat.App.csproj
+++ b/src/TimCodes.Mtd.Vat.App/TimCodes.Mtd.Vat.App.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1054.31" />
+    <PackageReference Include="Otp.NET" Version="1.2.2" />
   </ItemGroup>
 
   <ItemGroup>
